<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogoRegister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/logo_text"
        app:srcCompat="@drawable/logo" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="6dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFirstNameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFirstNameRegister"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:textColorHint="#625D5D" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLastNameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:textColorHint="#625D5D" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEmailRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="#625D5D" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPhoneRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPhoneRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textColorHint="#625D5D" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="#625D5D" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmRegister"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_weight="1"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/btnGoToLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_go_to_login" />
    </LinearLayout>

</LinearLayout>