<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="58dp"
        android:contentDescription="@string/logo_text"
        app:srcCompat="@drawable/logo" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="56dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEmailLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="#625D5D" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_indicator"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="#625D5D" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmLogin"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_weight="1"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/btnGoToRegister"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_go_to_register" />
    </LinearLayout>

</LinearLayout>